nginx-yaml/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "2"
    image.openshift.io/triggers: '[{"from":{"kind":"ImageStreamTag","name":"cicd:latest"},"fieldPath":"spec.template.spec.containers[?(@.name==\"cicd\")].image"}]'
    openshift.io/generated-by: OpenShiftNewApp
  generation: 2
  labels:
    app: cicd
    app.kubernetes.io/component: cicd
    app.kubernetes.io/instance: cicd
  name: cicd
  namespace: cicd
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      deployment: cicd
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        deployment: cicd
    spec:
      containers:
      - image: image-registry.openshift-image-registry.svc:5000/demo/demo@sha256:f50abc1ffeb2b630031b9ba0ddef9655adec410b3bce77ce9be828f119a261c1
        imagePullPolicy: IfNotPresent
        name: cicd
        ports:
        - containerPort: 8080
          protocol: TCP
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
