nginx-yaml/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
  labels:
    app: cicd
    app.kubernetes.io/component: cicd
    app.kubernetes.io/instance: cicd
  name: cicd
  namespace: cicd
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    deployment: cicd
  sessionAffinity: None
  type: ClusterIP
