nginx-yaml/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: cicd
    app.kubernetes.io/component: cicd
    app.kubernetes.io/instance: cicd
  name: cicd
  namespace: cicd
spec:
  host: cicd-cicd.apps-crc.testing
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: cicd
    weight: 100
  wildcardPolicy: None
